--- a/instagramm/Base.lproj/Main.storyboard
+++ b/instagramm/Base.lproj/Main.storyboard
@@ -158,16 +158,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="296" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4tq-cp-Qsw">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="305" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4tq-cp-Qsw">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhotoTableViewCell" rowHeight="296" id="xuC-s5-aTH" customClass="PhotoTableViewCell" customModule="instagramm" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="296"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhotoTableViewCell" rowHeight="305" id="xuC-s5-aTH" customClass="PhotoTableViewCell" customModule="instagramm" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="305"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xuC-s5-aTH" id="4rm-9X-OXE">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="295"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="304.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R6f-cx-WcV">
@@ -185,6 +185,7 @@
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="captionLabel" destination="eSk-SE-bCZ" id="0Vz-Y5-tgk"/>
                                             <outlet property="label" destination="eSk-SE-bCZ" id="TuG-R6-OSv"/>
                                             <outlet property="photo" destination="R6f-cx-WcV" id="vZx-DR-eZh"/>
                                         </connections>
@@ -203,10 +204,10 @@
             </objects>
             <point key="canvasLocation" x="1941.5999999999999" y="-502.39880059970017"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--InstaTabViewController-->
         <scene sceneID="ug7-uP-UOw">
             <objects>
-                <tabBarController storyboardIdentifier="InstaTabBarController" id="gPQ-Us-0pb" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="InstaTabBarController" title="InstaTabViewController" id="gPQ-Us-0pb" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="BL1-TG-8qm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
